--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 <img src="photo/Faiq.jpg" alt="Faiq">
 
-<p>Hello. My name is Jaris Jamsyir. Right now, I am living with my family in Seri Kembangan, Selangor. </p>
+<p>Hello. My name is Jaris Jamsyir. Right now, I am living with my family in Seri Kembangan, Selangor.This website is about my family (including our pets). </p>
 
 <h2>My family members</h2>
 
 <a href="parents.html">My parents</a> <br>
-<a href="grandparents.html">My parents' parents</a> <br>
 <a href="siblings.html">My siblings</a> <br>
+<a href="pets.html">Our pets</a> <br>
 <a href="familypictures.html">Photo album</a> 
 
 </body>
