--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-<h1>&ltFaiq's family&gt</h1>
+<h1>&ltjj's family&gt</h1>
 
 <hr><br>
 
-<img src="photo/Faiq.jpg" alt="Faiq">
+<img src="photo/familycover.jpg" alt="Photo of our family">
 
 <p>Hello. My name is Jaris Jamsyir. Right now, I am living with my family in Seri Kembangan, Selangor.This website is about my family (including our pets). </p>
 
