--- a/parents.html
+++ b/parents.html
@@ -1,34 +1,27 @@
 <DOCTYPE html>
 <html>
 <head>
-  <title>Faiq's Parents</title>
+  <title>jj's Parents</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>&ltFaiq's parents&gt</h1>
+<h1>&ltjj's parents&gt</h1>
 
 <hr>
 
 <h2>My Father</h2>
 
-<img src="photo/Father.jpg" alt="Izhal">
+<img src="photo/roslan.jpg" alt="Mohd Roslan">
 
-<p>jvhggh</p>
+<p>His name is Mohd Roslan bin Che Soh. The backbone of the family. He always works hard for us to live comfortably. A great father figure, he always teaches about the way of life and keep reminding us to always do good deeds.</p>
 
-<h3>More About Him</h3>
-
-<p>Currently, he's a lecturer at UPM. When he is not doing lecturer stuff on his laptop, he can be seen tending to his betta fishes that he breed to sell. His hobbies include watching Islamic videos on YouTube and playing chess casually on his phone.</p>
 
 <h2>My Mother</h2>
 
-<img src="photo/Mother.jpg" alt="Fara">
+<img src="photo/hafiza.jpg" alt="Hafiza">
 
-<p>My mother is a human, a human named Farawahida binti Abdul Aziz born on the third of July 1975.</p>
-
-<h3>More About Her</h3>
-
-<p>She's the mother of 7 children. It's been years since she last had an occupation because she had quit her last job to focus taking care of us. My mother is a very kind person though I do think she's too imposing on us with her ideas and opinions.</p>
+<p>Her name is Hafiza binti Che Abdul Manan. Our beloved mother. She did a lot for our family. Very kind and gentle, she also works hard for this family, which we all are forever grateful. </p>
 
 </body>
 </html>
