--- a/siblings.html
+++ b/siblings.html
@@ -1,53 +1,38 @@
 <DOCTYPE html>
 <html>
 <head>
-  <title>Faiq's Siblings</title>
+  <title>jj's Siblings</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>&ltFaiq's siblings&gt</h1>
+<h1>&ltjj's siblings&gt</h1>
 
 <hr>
 
-<h3>Quick Preface</h3>
+<h2>Nurin Nadhirah</h2>
 
-<p>t.</p>
+<img src="photo/nurinnadhirah.JPG" alt="Nurin Nadhirah photo">
 
-<h2>Izz Farish</h2>
+<p>The first daughter. She always helps our mother in keeping the house tidy.</p>
 
-<img src="photo/Izz.JPG" alt="Izz Farish photo">
+<h2>Hafiz Hakimi</h2>
 
-<p>t's</p>
+<img src="photo/hafizhakimi.JPG" alt="Hafiz Hakimi photo">
 
-<h2>Emir</h2>
+<p>The second son. He goes to SDAR, an all-boys school. Loves to play games on his iPad, especially Mobile Legends. </p>
 
-<img src="photo/Emir.JPG" alt="Emir photo">
+<h2>Nurdamia Najihah</h2>
 
-<p>typi</p>
+<img src="photo/damia.JPG" alt="Nurdamia photo">
 
-<h2>Ilm</h2>
+<p>The second youngest. She and her little sister cannot be separated; they always go together. While they may fight here and there, they will always make up for it.</p>
 
-<img src="photo/Ilm.JPG" alt="Ilm photo">
+<h2>Khaira Balqis</h2>
 
-<p> th.</p>
+<img src="photo/khaira.jpg" alt="Khaira Balqis photo">
 
-<h2>Read</h2>
-
-<img src="photo/Read.jpg" alt="Photo including Read">
-
-  <p>that</p>
+<p>The youngest of the family. She always records herself, doing lots of poses and do make ups almost every day. It is quite entertaining with her around.</p>
   
-<h2>Rumi</h2>
-
-<img src="photo/Rumi.JPG" alt="Rumi photo">
-
-<p>her ber. Though if she's infurbrother.</p>
-
-<h2>Liam</h2>
-
-<img src="photo/Liam.JPG" alt="Liam photo">
-
-<p>.</p>
 </body>
 </html>
