--- a/pets.html
+++ b/pets.html
@@ -10,23 +10,29 @@
 
 <hr>
 
-<h2>Manja</h2>
+<h2>Kechik</h2>
 
-<img src="photo/Manja.jpg" alt="Manja the cat">
+<img src="photo/kechik.jpg" alt="Kechik the cat">
 
-<p>dye.</p>
+<p>A good mother :)</p>
 
-<h2>Raggy</h2>
+<h2>Mochi</h2>
 
-<img src="photo/Raggy.jpg" alt="Raggy the cat">
+<img src="photo/mochi.jpg" alt="Mochi the cat">
 
-<p> </p>
+<p>Very fluffy.</p>
 
-<h2>Kuna</h2>
+<h2>Oyen</h2>
 
-<img src="photo/Kuna.jpg" alt="Kuna the cat">
+<img src="photo/oyen.jpg" alt="Oyen the cat">
 
-<p>h.</p>
+<p>Most problematic.</p>
+  
+<h2>Oreo</h2>
+
+<img src="photo/oreo.jpg" alt="Oreo the cat">
+
+<p>Also cute.</p>
 
 </body>
 </html>
