--- a/photoalbum.html
+++ b/photoalbum.html
@@ -1,13 +1,23 @@
 <DOCTYPE html>
 <html>
 <head>
-  <title>Our pets</title>
+  <title>Photo Album</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+  
+<h1>Photo Album</h1>\
+ 
 <hr>
   
 <h3>Pictures of us</h3>
-
   
+<img src="photo/familypic1.jpg" alt="Photo of my family"><br>
+<img src="photo/familypic2.jpg" alt="Photo of my family"><br>
+<img src="photo/familypic3.jpg" alt="Photo of my family"><br>
+<img src="photo/familypic4.jpg" alt="Photo of my family"><br>
+<img src="photo/familypic5.jpg" alt="Photo of my family"><br>
+<img src="photo/familypic6.jpg" alt="Photo of my family"><br>
+  
+  </body>
+  </html>
