--- a/pets.html
+++ b/pets.html
@@ -27,7 +27,13 @@
 <img src="photo/oyen.jpg" alt="Oyen the cat">
 
 <p>Most problematic.</p>
+
+<h2>Milo</h2>
   
+<img src="photo/milo.jpg" alt="Milo the cat">
+
+<p>Cute cat.</p>
+ 
 <h2>Oreo</h2>
 
 <img src="photo/oreo.jpg" alt="Oreo the cat">
