--- a/pets.html
+++ b/pets.html
@@ -34,9 +34,9 @@
 
 <p>Cute cat.</p>
  
-<h2>Oreo</h2>
+<h2>Mimi</h2>
 
-<img src="photo/oreo.jpg" alt="Oreo the cat">
+<img src="photo/mimi.jpg" alt="Mimi the cat">
 
 <p>Also cute.</p>
 
