--- a/parents.html
+++ b/parents.html
@@ -23,5 +23,9 @@
 
 <p>Her name is Hafiza binti Che Abdul Manan. Our beloved mother. She did a lot for our family. Very kind and gentle, she also works hard for this family, which we all are forever grateful. </p>
 
+<a href="siblings.html">My siblings</a> <br>
+<a href="pets.html">Our pets</a> <br>
+<a href="familypictures.html">Photo album</a> 
+
 </body>
 </html>
