--- a/siblings.html
+++ b/siblings.html
@@ -34,5 +34,9 @@
 
 <p>The youngest of the family. She always records herself, doing lots of poses and do make ups almost every day. It is quite entertaining with her around.</p>
   
+<a href="parents.html">My parents</a> <br>
+<a href="pets.html">Our pets</a> <br>
+<a href="familypictures.html">Photo album</a> 
+  
 </body>
 </html>
