--- a/pets.html
+++ b/pets.html
@@ -39,6 +39,10 @@
 <img src="photo/mimi.jpg" alt="Mimi the cat">
 
 <p>Also cute.</p>
+  
+<a href="parents.html">My parents</a> <br>
+<a href="siblings.html">My siblings</a> <br>
+<a href="familypictures.html">Photo album</a> 
 
 </body>
 </html>
