--- a/photoalbum.html
+++ b/photoalbum.html
@@ -19,5 +19,9 @@
 <img src="photo/familypic5.jpg" alt="Photo of my family"><br>
 <img src="photo/familypic6.jpg" alt="Photo of my family"><br>
   
+<a href="parents.html">My parents</a> <br>
+<a href="siblings.html">My siblings</a> <br>
+<a href="pets.html">Our pets</a>
+  
   </body>
   </html>
