--- a/siblings.html
+++ b/siblings.html
@@ -12,19 +12,19 @@
 
 <h2>Nurin Nadhirah</h2>
 
-<img src="photo/nurinnadhirah.JPG" alt="Nurin Nadhirah photo">
+<img src="photo/nurinnadhirah.jpg" alt="Nurin Nadhirah photo">
 
 <p>The first daughter. She always helps our mother in keeping the house tidy.</p>
 
 <h2>Hafiz Hakimi</h2>
 
-<img src="photo/hafizhakimi.JPG" alt="Hafiz Hakimi photo">
+<img src="photo/hafizhakimi.jpg" alt="Hafiz Hakimi photo">
 
 <p>The second son. He goes to SDAR, an all-boys school. Loves to play games on his iPad, especially Mobile Legends. </p>
 
 <h2>Nurdamia Najihah</h2>
 
-<img src="photo/damia.JPG" alt="Nurdamia photo">
+<img src="photo/damia.jpg" alt="Nurdamia photo">
 
 <p>The second youngest. She and her little sister cannot be separated; they always go together. While they may fight here and there, they will always make up for it.</p>
 
