--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <p>Hello. My name is Jaris Jamsyir. Right now, I am living with my family in Seri Kembangan, Selangor.This website is about my family (including our pets). </p>
 
 <h2>My family members</h2>
-
+  
+<a href="index.html">Back to home</a> <br>
 <a href="parents.html">My parents</a> <br>
 <a href="siblings.html">My siblings</a> <br>
 <a href="pets.html">Our pets</a> <br>
