--- a/parents.html
+++ b/parents.html
@@ -23,6 +23,7 @@
 
 <p>Her name is Hafiza binti Che Abdul Manan. Our beloved mother. She did a lot for our family. Very kind and gentle, she also works hard for this family, which we all are forever grateful. </p>
 
+<a href="index.html">Back to home</a> <br>
 <a href="siblings.html">My siblings</a> <br>
 <a href="pets.html">Our pets</a> <br>
 <a href="familypictures.html">Photo album</a> 
