--- a/pets.html
+++ b/pets.html
@@ -39,7 +39,8 @@
 <img src="photo/mimi.jpg" alt="Mimi the cat">
 
 <p>Also cute.</p>
-  
+ 
+<a href="index.html">Back to home</a> <br>
 <a href="parents.html">My parents</a> <br>
 <a href="siblings.html">My siblings</a> <br>
 <a href="familypictures.html">Photo album</a> 
