--- a/siblings.html
+++ b/siblings.html
@@ -33,7 +33,8 @@
 <img src="photo/khaira.jpg" alt="Khaira Balqis photo">
 
 <p>The youngest of the family. She always records herself, doing lots of poses and do make ups almost every day. It is quite entertaining with her around.</p>
-  
+
+<a href="index.html">Back to home</a> <br>  
 <a href="parents.html">My parents</a> <br>
 <a href="pets.html">Our pets</a> <br>
 <a href="familypictures.html">Photo album</a> 
